(#71 codec) Initial Jackson codec